--- a/transformers_doc/quicktour.ipynb
+++ b/transformers_doc/quicktour.ipynb
@@ -4817,6 +4817,8 @@
         "outputId": "80128f87-7e03-4831-8f38-554ec584f68f"
       },
       "source": [
+        "# This is with examples, and fine-tuning examples\n",
+        "\n",
         "# Transformers installation\n",
         "! pip install transformers datasets\n",
         "# To install from source instead of the last release, comment the command above and uncomment the following one.\n",
