--- a/assets/hub/huggingface_pytorch-transformers.ipynb
+++ b/assets/hub/huggingface_pytorch-transformers.ipynb
@@ -19,7 +19,7 @@
         "\n",
         "----------------------------------------------------------------------\n",
         "\n",
-        "# PyTorch-Transformers\n",
+        "# PyTorch-Transformers - HuggingFace\n",
         "\n",
         "*Author: HuggingFace Team*\n",
         "\n",
