--- a/notebooks/02_how_to_generate.ipynb
+++ b/notebooks/02_how_to_generate.ipynb
@@ -34,7 +34,8 @@
       "source": [
         "\n",
         "# How to generate text: using different decoding methods for language generation with Transformers\n",
-        "## From: https://huggingface.co/transformers/v3.0.2/notebooks.html"
+        "## From: https://huggingface.co/transformers/v3.0.2/notebooks.html\n",
+        "## Under evaluation"
       ]
     },
     {
