--- a/notebooks/02_how_to_generate.ipynb
+++ b/notebooks/02_how_to_generate.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "# How to generate text: using different decoding methods for language generation with Transformers\n",
         "## From: https://huggingface.co/transformers/v3.0.2/notebooks.html\n",
-        "## Under evaluation"
+        "## Under evaluation ..."
       ]
     },
     {
